# Goodshepherd

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SENIOR_DEVELOPER_ASSESSMENT.md  alembic.ini  architecture_diagram.md  development_roadmap.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_service/: app.py
backend/: Dockerfile  __init__.py  alembic.ini  etl-processor.js  main.py  package.json  requirements.txt  rss-collector.js  telemetry.py
backend/alembic/: env.py
backend/alerts/: __init__.py  alert_engine.py  delivery.py  digest_service.py  notification_dispatcher.py  notification_preferences.py  rules.py  sms_delivery.py
backend/analytics/: __init__.py  ml_feedback.py  service.py
backend/auth/: account_lockout.py  audit_log.py  email_service.py  jwt.py  password_reset.py  rbac.py  session_manager.py  user_repository.py
backend/compliance/: __init__.py  anonymizer.py  gdpr.py
backend/core/: __init__.py  audit.py  config.py  database.py  dependencies.py  security.py
backend/database/: __init__.py  config.py  models.py  repository.py  session.py
backend/geocode/: nominatim.py
backend/ingestion/: __init__.py  ingest_service.py  multi_source_ingest.py
backend/location/: __init__.py  geofencing.py
backend/migrations/: env.py
backend/ml/: __init__.py  disinfo_detector.py  model_service.py  threat_classifier.py  translation.py
backend/models/: __init__.py  audit.py  user.py  (+4 more)
docker/: backend.Dockerfile
docs/: API.md  Blueprint.md  DATA_MODEL.md  DEPLOYMENT.md  EUROPEAN_PILOT.md  FEATURES.md  PROJECT_BIBLE.md  Runbook.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.js  tailwind.config.js
infrastructure/: .env.example  Caddyfile  Caddyfile.prod  docker-compose.prod.yml  docker-compose.yml
scripts/: dev.sh  quickstart.sh  stop.sh
(+154 files in other folders)
